--- a/www/css/App.css
+++ b/www/css/App.css
@@ -92,3 +92,12 @@
     width: 4ex;
     margin-right: 1em;
 }
+
+.remote-text-input-area {
+    position: absolute;
+    z-index: 100;
+    background-color: rgb(255, 255, 224);
+    width: 100%;
+    padding: 1em;
+    box-shadow: 1px 1px 5px #888;
+}
